--- a/crud_node/applications-crud/frontend/index.html
+++ b/crud_node/applications-crud/frontend/index.html
@@ -68,21 +68,18 @@
           <a class="nav-link text-white" href="#documentType"><i class="bi bi-person-badge me-2"></i> Tipos de Documento</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" href="#module"><i class="bi bi-graph-up me-2"></i> Modulo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#moduleRole"><i class="bi bi-file-earmark-text me-2"></i> Módulo de Roles</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="#role" title="Roles"><i
               class="bi bi-people-fill me-2"></i> Roles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#profile" title="Profile"><i
               class="bi bi-person-vcard me-2"></i> Perfil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#roleModule"><i class="bi bi-file-earmark-text me-2"></i> Módulo de Roles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#module"><i class="bi bi-graph-up me-2"></i> Modulo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#"><i class="bi bi-graph-up me-2"></i> Estadísticas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#"><i class="bi bi-question-circle me-2"></i> Ayuda</a>
@@ -92,13 +89,14 @@
   </aside>
   <!--End Sidebar -->
   <!-- Main Content -->
-  <!-- Main Content -->
-  <main class="main-content p-4">
+  <main class="main-content">
     <div class="container-fluid">
       <div class="card">
         <div class="card-body">
-          <iframe class="card-img-bottom" id="contentFrame" style="border-style: none; height: 0; overflow: hidden"
-            onload="resizeIframe(this)" src="./views/errors/404.html" alt="Imagen de ejemplo"></iframe>
+          <iframe id="contentFrame" 
+                  src="./views/errors/404.html" 
+                  alt="Contenido principal"
+                  style="width: 100%; height: 100%; border: none;"></iframe>
         </div>
       </div>
     </div>
@@ -136,7 +134,6 @@
     function loadIframe(url) {
       const iframe = document.getElementById('contentFrame');
       iframe.src = url;
-      iframe.style.height = '80vh';
     }
 
     // Botón Perfil
